# fund

./: .dockerignore  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.serena/: project.yml
.tmp_research/: kuaixun.js
apps/api/: report_api.py
config/: factor_weights.yaml  model_providers.json  strategy_profiles.json
data/: fund_intel.db
docs/api/: API_SUMMARY.zh-CN.md  openapi.yaml
docs/architecture/: domain-model.md
docs/compliance/: license-matrix.md
docs/plan/: frontend-plan.zh-CN.md
docs/product/: admin-console.zh-CN.md  prd-fund-intel.md
docs/research/: backtest-methodology.md  data-source-integration-plan.zh-CN.md
infra/db/: schema.sql
ops/monitoring/: data_source_dashboard.json
scripts/: check_api_runtime.py  check_hkcloud_fund_endpoints.py  check_p1_data_hub.py  check_p2_storage.py  check_p3_factor_engine.py  check_p4_backtest.py  check_p5_news_pipeline.py  check_p6_reporting.py  check_p7_governance.py  check_runtime_independence.py
services/backtest/: __init__.py  metrics.py  runner.py
services/config/: __init__.py  model_settings.py  store.py  strategy_settings.py
services/data_hub/: __init__.py  cache_policy.py  exceptions.py  http_client.py  normalizer.py  repository.py  source_manager.py  stock_mcp_client.py  types.py
services/factor_engine/: __init__.py  base_factor.py  scoring.py
services/llm/: __init__.py  connectivity.py
tests/: test_backtest_runner.py  test_factor_engine.py  test_news_pipeline.py  test_observability.py  test_reporting.py
(+58 files in other folders)
