[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fund-intel"
version = "0.1.0"
description = "China fund and ETF intelligence platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "pandas>=2.0.0",
  "akshare>=1.17.67",
  "efinance>=0.5.5.2",
  "yfinance>=0.2.65",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["services*"]
